--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "reactstrap": "^8.9.0",
     "redux": "^4.0.5",
     "redux-form": "^8.3.7",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
